Fix overflowing messages

--- a/src/components/Messages/Messages.module.scss
+++ b/src/components/Messages/Messages.module.scss
@@ -2,8 +2,10 @@
 
 .Messages {
   display: grid;
-  overflow-y: auto;
   grid-row: 2 / 3;
+  height: 0;
+  min-height: 100%;
+  overflow-y: auto;
   grid-template-columns: 1rem 2fr 5fr 2fr 1rem;
   align-content: start;
   list-style: none;
